# payment_service

./: .gitignore  AGENTS.md  Dockerfile  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  schemas.py  serve_rpc.py
.github/workflows/: docker-build-push.yml
alembic/: env.py
alembic/versions/: 09da9c99d25d_add_transactions_accounts.py  31a258775879_update_payment_delete_transaction.py  9c361e80917c_update_payment_table.py  dc15df552fea_init.py  e14844ed736e_update_payment_delete_transaction.py
core/: logger.py  utils.py
database/crud/: __init__.py  base.py  payment.py  plan.py  transaction.py  user_account.py
database/db/: session.py
database/models/: __init__.py  payment.py  plan.py  transaction.py  user_account.py
database/schemas/: payment.py  plan.py  transaction.py  user_account.py
dependencies/: get_user.py  rabbit.py
router/: health.py  stripe.py
router/stripe/: private.py  public.py
router/v1/: private.py  public.py
router/v1/account_management/: __init__.py  account.py  plan.py  plan_public.py
rpc_server/: account_rcp.py  buf.gen.yaml  health.py  stripe_rpc.py
schemas/: account.py  plan.py  stripe.py
services/: rabbit_service.py  request_webhook.py
services/stripe_service/: service.py  types.py
stripe_service/: service.py  types.py
tests/router/v1/account_management/: _setup.py  conftest.py  helpers.py  test_account.py  test_plan.py
